log/build_2022-09-02_23-58-37/pkg_laser/stdout_stderr.log
running egg_info
writing ../../build/pkg_laser/pkg_laser.egg-info/PKG-INFO
writing dependency_links to ../../build/pkg_laser/pkg_laser.egg-info/dependency_links.txt
writing entry points to ../../build/pkg_laser/pkg_laser.egg-info/entry_points.txt
writing requirements to ../../build/pkg_laser/pkg_laser.egg-info/requires.txt
writing top-level names to ../../build/pkg_laser/pkg_laser.egg-info/top_level.txt
reading manifest file '../../build/pkg_laser/pkg_laser.egg-info/SOURCES.txt'
writing manifest file '../../build/pkg_laser/pkg_laser.egg-info/SOURCES.txt'
running build
running build_py
copying pkg_laser/movement.py -> /home/brunofarias/turtlebot3_ws/build/pkg_laser/build/lib/pkg_laser
running install
running install_lib
copying /home/brunofarias/turtlebot3_ws/build/pkg_laser/build/lib/pkg_laser/movement.py -> /home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser
byte-compiling /home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py to movement.cpython-38.pyc
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 132
    if(!mudouNor and laser.leste != 0.0 and laser.oeste != 0.0 and laser.leste != math.inf and laser.oeste != math.inf):
       ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/pkg_laser/pkg_laser.egg-info to /home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser-0.0.0-py3.8.egg-info
running install_scripts
Installing laser script to /home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/pkg_laser
Installing movement script to /home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/pkg_laser
Installing node_laser script to /home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/pkg_laser
writing list of installed files to '/home/brunofarias/turtlebot3_ws/build/pkg_laser/install.log'
